# sbcmail_skill

./: README.md  pyproject.toml  skill.md
sbcmail_skill/: __init__.py  credentials.py  mailbox.py  models.py  utils.py
